# silv-test

./: Cargo.toml  netcdf.lib
src/: formats.rs  lib.rs  main.rs
src/formats/: cfradial.rs  dorade.rs  nexrad.rs  uf.rs
