[package]
name = "silv"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
bincode = "1.3.3"
serde = { version = "1.0.132", features = ["derive"] }
glob = "0.3.0"
netcdf = { version = "0.8" }
clap = "3.0.4"
regex = "1.5.5"
bzip2 = "0.4.4"
lazy_static = "1.4.0"
